--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,85 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+	margin: 0;
+	padding: 0;
+}
+
+body{
+    background-color: #6a626b;
 }
 
 .divHeader {
-    width: 100%;
+	width: 100%;
 }
+
+.divHeader h1 {
+    color: #aae909;
+    font-size: 60px;
+    text-shadow: 2px 2px black;
+}
+
+.divHeader ul {
+	list-style: none;
+	display: flex;
+	justify-content: space-between;
+	align-self: center;
+	margin-top: 20px;
+}
+
+.divHeader ul li {
+	cursor: pointer;
+	width: 120px;
+	margin: 0 10px;
+}
+
+.divHeader ul li .page-link:hover {
+	background-color: blueviolet;
+    color: white;
+}
+
 .divHeader .header {
-    width: 100%;
-    color: #FFF;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+    justify-content: center;
+}
+
+.cover {
+    /* height: 350px; */
+    background-image: url(../img/Portal.png);
+    background-size: cover;
+    background-position: center;
+ 
 }
 
 .styleContainer {
-    position: relative;
-    top: 130px;
+	position: relative;
+	top: 250px;
+	margin-bottom: 320px;
 }
 
 .footer {
-    color: #FFF;
-    font: 30px;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
+	color: #fff;
+	font: 30px;
+	position: fixed;
+    padding: 15px;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+
+
+/* Media queries */
+
+@media(min-width: 768px) {
+    .divHeader .header {
+		flex-direction: row;
+		justify-content: space-around;
+        padding: 20px;
+	}
+
+    .styleContainer {
+        position: relative;
+        top: 150px;
+        margin-bottom: 215px;
+    }
 }
